--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Kofetochkablg</string>
+    <string name="app_name">КофеТочка</string>
+    <string name="item_home">Home</string>
 </resources>
