--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">КофеТочка</string>
     <string name="item_home">Home</string>
     <string name="item_openshift">Открыть смену</string>
+    <string name="table_login">ВХОД</string>
+    <string name="hint_login">Логин*</string>
+    <string name="hint_password">Пароль*</string>
+    <string name="error_block">Ваша учетная запись заблокирована</string>
+    <string name="error_login_password">Пара логин/пароль введены неверно</string>
 </resources>
